# zkevm-circuits

./: Cargo.toml  Dockerfile.testool-super-circuit  Makefile  deny.toml
.github/workflows/: ci.yml
aggregator/: Cargo.toml  README.md  chunks.json
aggregator/src/: aggregation.rs  barycentric.rs  batch.rs  blob.rs  chunk.rs  compression_v2.rs  constants.rs  core.rs  lib.rs  param.rs  simple_aggregation.rs  tests.rs  util.rs
aggregator/src/aggregation/: barycentric.rs  batch_data.rs  blob_data.rs  circuit.rs  circuit_v2.rs  config.rs  config_v2.rs  decoder.rs  decompression.rs  rlc.rs  util.rs  vanilla_plonk.rs
aggregator/src/aggregation/decoder/: seq_exec.rs  tables.rs  witgen.rs
aggregator/src/aggregation/decoder/tables/: bitstring.rs  bitstring_accumulation.rs  fixed.rs  fse.rs  literals_header.rs  rom_fse_order.rs  rom_sequence_codes.rs  rom_tag.rs  seqinst_table.rs
aggregator/src/aggregation/decoder/tables/fixed/: fse_table_transition.rs  seq_data_interleaved_order.rs  seq_tag_order.rs  tag_transition.rs  variable_bit_packing.rs
aggregator/src/aggregation/decoder/witgen/: params.rs  types.rs  util.rs
aggregator/src/aggregation/decompression/: decoder.rs
aggregator/src/aggregation/decompression/witgen/: mod.rs  params.rs  types.rs  util.rs
aggregator/src/aggregation/rlc/: config.rs  gates.rs
aggregator/src/aggregation/vanilla_plonk/: config.rs  gates.rs  lookup.rs  lookup2.rs
aggregator/src/compression/: circuit.rs  config.rs
aggregator/src/compression_v2/: circuit.rs  config.rs
aggregator/src/simple_aggregation/: circuit.rs  circuit_ext.rs  config.rs
aggregator/src/tests/: aggregation.rs  bench_hash.rs  blob.rs  blob_data.rs  compression.rs  mock_chunk.rs  simple_aggregation.rs
aggregator/src/tests/plonk_gate/: dynamic_hashes.rs  gates.rs
aggregator/src/tests/rlc/: dynamic_hashes.rs  gates.rs
benchmarks/: Cargo.toml
benchmarks/benches/: estimate_rows.rs  serde.rs
benchmarks/examples/: estimate_rows.rs
benchmarks/src/: utils.rs
bus-mapping/: Cargo.toml
bus-mapping/examples/: revm.rs
bus-mapping/src/: circuit_input_builder.rs  error.rs  l2_predeployed.rs  lib.rs  operation.rs  precompile.rs  revme.rs  rpc.rs  state_db.rs  util.rs
bus-mapping/src/circuit_input_builder/: access.rs  block.rs  call.rs  curie.rs  execution.rs  input_state_ref.rs  l2.rs  tracer_tests.rs  transaction.rs
bus-mapping/src/data/: v2_l1_oracle_bytecode.txt
bus-mapping/src/evm/: opcodes.rs
bus-mapping/src/operation/: container.rs
circuit-benchmarks/: Cargo.toml
circuit-benchmarks/src/: bytecode_circuit.rs  copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  pi_circuit.rs  super_circuit.rs  tx_circuit.rs
docker/: testool-chunk-prove-compose.yml  testool-cpu.Dockerfile  testool-gpu.Dockerfile  testool-inner-prove-compose-with-export-offset.yml  testool-inner-prove-compose.yml  testool-mock-prove-compose.yml
eth-types/: Cargo.toml
eth-types/src/: error.rs  evm_types.rs  geth_types.rs  l2_types.rs  lib.rs  parser.rs  revm.rs  rpc.rs  sign_types.rs  utils.rs
eth-types/src/evm_types/: memory.rs  opcode_ids.rs
external-tracer/: Cargo.toml
external-tracer/src/: lib.rs
gadgets/: Cargo.toml
gadgets/src/: batched_is_zero.rs  bus.rs  comparator.rs  evm_word.rs  is_equal.rs  is_zero.rs  less_than.rs  lib.rs  monotone.rs  mul_add.rs  range.rs  util.rs
gadgets/src/bus/: batch_assigner.rs  bus_builder.rs  bus_chip.rs  bus_codec.rs  bus_lookup.rs  bus_multi.rs  bus_port.rs  port_assigner.rs  port_multi.rs  tests.rs  util.rs
geth-utils/: build.rs
geth-utils/l1geth/: trace.go
geth-utils/l2geth/: asm.go  go.mod  go.sum  lib.go  trace.go  util.go
integration-tests/: Cargo.toml
integration-tests/examples/: collect.rs
integration-tests/src/: integration_test_circuits.rs  lib.rs
integration-tests/tests/: circuit_input_builder.rs  collect.rs  collect_seq.rs  mainnet.rs  rpc.rs
keccak256/: Cargo.toml
keccak256/src/: arith_helpers.rs
mock/: Cargo.toml
mock/src/: block.rs  lib.rs  test_ctx.rs  transaction.rs
prover/: Cargo.toml
prover/examples/: estimate_rows.rs
prover/src/: aggregator.rs  lib.rs  test_util.rs  utils.rs
prover/src/common/prover/: chunk.rs  inner.rs
prover/src/common/verifier/: evm.rs
prover/src/test/: batch.rs  chunk.rs  inner.rs
prover/src/test_util/: proof.rs
prover/src/types/: eth.rs
prover/src/zkevm/: capacity_checker.rs  circuit.rs  prover.rs
prover/src/zkevm/circuit/: builder.rs  l1_builder.rs  l2_builder.rs
prover/src/zkevm/circuit/builder/: bytecode.rs  chunk_trace.rs  row_usage.rs  storage_trace.rs
revm-executor/: Cargo.toml
revm-executor/examples/: revm.rs
revm-executor/src/: database.rs  executor.rs  lib.rs  utils.rs
testool/: Cargo.toml  Config.toml  Makefile  codehash.txt  download_setup.sh  full_test_ids.txt  nohup.sh  post-check.sh  run_test_ids.sh  test_ids.txt
testool/src/: compiler.rs  config.rs  main.rs  utils.rs
testool/src/statetest/: executor.rs  mod.rs  results.rs  suite.rs  yaml.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: copy_circuit.rs  decompression_circuit.rs  ecc_circuit.rs  evm_bus.rs  evm_circuit.rs  exp_circuit.rs  keccak_circuit.rs  lib.rs  modexp_circuit.rs  mpt_circuit.rs  pi_circuit.rs  poseidon_circuit.rs  rlp_circuit_fsm.rs  sig_circuit.rs  state_circuit.rs  super_circuit.rs  table.rs  table_bus.rs  test_util.rs  tx_circuit.rs  util.rs  witness.rs
zkevm-circuits/src/bytecode_circuit/: bytecode_unroller.rs  circuit.rs  dev.rs  test.rs
zkevm-circuits/src/copy_circuit/: copy_gadgets.rs  dev.rs  test.rs  util.rs
zkevm-circuits/src/decompression_circuit/: dev.rs  test.rs
zkevm-circuits/src/ecc_circuit/: dev.rs  test.rs  util.rs
zkevm-circuits/src/evm_circuit/: execution.rs  param.rs  step.rs  table.rs  util.rs
zkevm-circuits/src/exp_circuit/: dev.rs  test.rs
zkevm-circuits/src/keccak_circuit/: dev.rs  keccak_packed_multi.rs  table.rs
zkevm-circuits/src/modexp_circuit/: dev.rs
zkevm-circuits/src/pi_circuit/: dev.rs  test.rs
zkevm-circuits/tests/: prover_error.rs
zktrie/: Cargo.toml
zktrie/src/: state.rs
(+201 files in other folders)
