[workspace]
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "keccak256",
    "zktrie",
    "gadgets",
    "integration-tests",
    "circuit-benchmarks",
    "eth-types",
    "external-tracer",
    "mock",
    "testool",
    "aggregator",
    "prover"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
ark-std = "0.3"
ctor = "0.1"
env_logger = "0.10"
ethers = { version = "2.0.7", features = ["ethers-solc"] }
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7", features = ["scroll"] }
ethers-providers = "=2.0.7"
ethers-signers = "=2.0.7"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-halo2-lib-0.4.0" }
hash-circuit = { package = "poseidon-circuit", git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "sync-halo2-lib-0.4.0" }
# halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", branch = "sync-halo2-lib-0.4.0", default-features=false, features=["halo2-pse","display","test-utils"] }
# halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", branch = "sync-halo2-lib-0.4.0", default-features=false, features=["halo2-pse","display"] }
halo2-base = { path = "../halo2-lib/halo2-base", default-features=false, features=["halo2-pse","display","test-utils"] }
halo2-ecc = { path = "../halo2-lib/halo2-ecc", default-features=false, features=["halo2-pse","display"] }
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4"
libsecp256k1 = "0.7"
log = "0.4"
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.17"
pretty_assertions = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rand_xorshift = "0.3"
rayon = "1.5"
regex = "1.5"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
# snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "sync-halo2-lib-0.4.0" }
# snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", branch = "sync-halo2-lib-0.4.0", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }
snark-verifier = { path = "../snark-verifier/snark-verifier" }
snark-verifier-sdk = { path = "../snark-verifier/snark-verifier-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }

strum = "0.24"
strum_macros = "0.24"
subtle = "2.4"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
url = "2.2"

[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
ethers-etherscan = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
# halo2_proofs = { path = "../halo2/halo2_proofs" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-halo2-lib-0.4.0" }
# [patch."https://github.com/scroll-tech/halo2.git"]
# halo2_proofs = { path = "../halo2/halo2_proofs" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "sync-halo2-lib-0.4.0" }
# [patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
# maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-ecc-snark-verifier-0323" }


# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true
