[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
eth-types = { path = "../eth-types", features = ["scroll"]  }
prover = { path = "../prover", features = ["scroll"]  }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.4", features = ["real_blackbox"] }

[[bench]]
name = "serde"
harness = false

[[bench]]
name = "estimate_rows"
harness = false

