[package]
name = "revm-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bus-mapping = { path = "../bus-mapping", features = ["scroll", "shanghai"] }
env_logger.workspace = true
ethers-core.workspace = true
eth-types = { path = "../eth-types" }
halo2_proofs.workspace = true
hex.workspace = true
log.workspace = true
mpt-zktrie = { path = "../zktrie" }
revm = { path = "../../revm/crates/revm", features = ["scroll-default-handler"] }
zktrie = { git = "https://github.com/scroll-tech/zktrie.git", tag = "v0.8.0", features= ["rs_zktrie"] }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
glob = "0.3"
zkevm-circuits = { path = "../zkevm-circuits", features = ["scroll", "shanghai"] }